8221823: Requested JDialog width is ignored

Reviewed-by: aivanov