src/java.desktop/windows/classes/sun/awt/windows/WDialogPeer.java
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1996, 2014, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1996, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,13 +22,19 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
+
 package sun.awt.windows;
 
-import java.awt.*;
-import java.awt.peer.*;
+import java.awt.Color;
+import java.awt.Component;
+import java.awt.Dialog;
+import java.awt.Dimension;
+import java.awt.SystemColor;
+import java.awt.Window;
+import java.awt.peer.DialogPeer;
 
-import sun.awt.*;
-import sun.awt.im.*;
+import sun.awt.AWTAccessor;
+import sun.awt.im.InputMethodManager;
 
 final class WDialogPeer extends WWindowPeer implements DialogPeer {
     // Toolkit & peer internals
@@ -110,9 +116,9 @@ final class WDialogPeer extends WWindowPeer implements DialogPeer {
     public Dimension getMinimumSize() {
         if (((Dialog)target).isUndecorated()) {
             return super.getMinimumSize();
-        } else {
-            return new Dimension(getSysMinWidth(), getSysMinHeight());
         }
+        return new Dimension(scaleDownX(getSysMinWidth()),
+                             scaleDownY(getSysMinHeight()));
     }
 
     @Override
