test/jdk/java/awt/Mixing/AWT_Mixing/MixingFrameResizing.java
@@ -39,7 +39,7 @@ import test.java.awt.regtesthelpers.Util;
 /*
  * @test
  * @key headful
- * @bug 6777370
+ * @bug 6777370 8221823
  * @summary Issues when resizing the JFrame with HW components
  * @author sergey.grinev@oracle.com: area=awt.mixing
  * @library /java/awt/patchlib  ../../regtesthelpers
